build index file

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 <body>
     <br>
     <div class="container">
-        <h1 class="text-center fs-1 fw-bold">SiR FELIX Pitches HubSpot</h1>
+        <h1 class="text-center fs-1 fw-bold">LORA PITCH-APP</h1>
         <h3 class="text-center fs-3">In this application you will be able to add your pitches and other user will have a chance to view it and comment to on it as they vote on it too and the pitches are categorized in different field.</h3>
     </div>
     <br>
