--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
     <br>
     <div class="container">
         <h1 class="text-center fs-1 fw-bold">LORA PITCH-APP</h1>
-        <h3 class="text-center fs-3">In this application you will be able to add your pitches and other user will have a chance to view it and comment to on it as they vote on it too and the pitches are categorized in different field.</h3>
+        <h3 class="text-center fs-3">Welcome to the pitches Thrills, you have less than a minute to write your new pitch to impress users, users will have to vote your pitch and also leaving comments.</h3>
     </div>
     <br>
     <br>
@@ -17,7 +17,7 @@
                         Inspirational Hub
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title fs-3"> <strong>Inspirational Pitches </strong> <br><br> Are you low? Do not worry you gonna inspired.</h5>
+                        <h5 class="card-title fs-3"> <strong>Inspirational Pitches </strong> <br><br>“Just one small positive thought in the morning can change your whole day.” </h5>
                     </div>
                     <div class="card-footer text-muted">
                         <button type="button" class="btn btn-outline-primary"><a href="../pitch/">Add Pitch</a></button>
@@ -31,7 +31,7 @@
                         Pick-Up Spot
                     </div>
                     <div class="card-body">
-                        <h5 class="card-titlen fs-3"> <strong>Pick-Up Pitches </strong> <br> <br>You Want to win her/him heart??</h5>
+                        <h5 class="card-titlen fs-3"> <strong>Pick-Up Pitches </strong> <br> <br>Are you a parking ticket? Cause you've got fine written all over you.</h5>
                     </div>
                     <div class="card-footer text-muted">
                         <button type="button" class="btn btn-outline-primary"><a href="../pitch/">Add Pitch</a></button>
@@ -61,10 +61,10 @@
             <div class="col-6 col-md-4">
                 <div class="card text-center">
                     <div class="card-header fs-1 fw-bold">
-                        LoVe Spot
+                        Love Spot
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title fs-3"> <strong>LoVe Pitches</strong> <br> <br>Live, Love and Laugh to Make your soul happy.</h5>
+                        <h5 class="card-title fs-3"> <strong>Love Pitches</strong> <br> <br>Live, Love and Laugh to Make your soul happy.</h5>
                     </div>
                     <div class="card-footer text-muted">
                         <button type="button" class="btn btn-outline-primary"><a href="../pitch/">Add Pitch</a></button>
@@ -78,7 +78,7 @@
                         Religious Hub
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title fs-3"> <strong>Religious Pitches</strong> <br> <br>Live, Love and Laugh to Make your soul happy.</h5>
+                        <h5 class="card-title fs-3"> <strong>Religious Pitches</strong> <br> <br> Be strong and courageous. </h5>
                     </div>
                     <div class="card-footer text-muted">
                         <button type="button" class="btn btn-outline-primary"><a href="../pitch/">Add Pitch</a></button>
@@ -92,7 +92,7 @@
                         Sporty Spot
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title fs-3"> <strong>Sport Pitches</strong> <br> <br>Live, Love and Laugh to Make your soul happy.</h5>
+                        <h5 class="card-title fs-3"> <strong>Sport Pitches</strong> <br> <br>“ The only way to prove that you're a good sport is to lose.”</h5>
                     </div>
                     <div class="card-footer text-muted">
                         <button type="button" class="btn btn-outline-primary"><a href="../pitch/">Add Pitch</a></button>
