--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -19,7 +19,7 @@
                 <a class="nav-link" href="/categories/memes">Memes</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/categories/love">LoVe</a>
+                <a class="nav-link" href="/categories/love">Love</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/categories/religious">Religious</a>
