--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
     <br>
     <div class="container">
         <div class="row">
-            <div class="col-6 col-md-4">
+            <div class="col-6 col-md-6">
                 <div class="card text-center">
                     <div class="card-header fs-1 fw-bold">
                         Inspirational Hub
@@ -25,7 +25,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-md-4">
+            <div class="col-6 col-md-6">
                 <div class="card text-center">
                     <div class="card-header fs-1 fw-bold">
                         Pick-Up Spot
@@ -39,26 +39,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-md-4">
-                <div class="card text-center">
-                    <div class="card-header fs-1 fw-bold">
-                        Memes Hub
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title fs-3"> <strong>Memes Pitches</strong> <br> <br>Don't feel bored, Just get some memes vybe.</h5>
-                    </div>
-                    <div class="card-footer text-muted">
-                        <button type="button" class="btn btn-outline-primary"><a href="../pitch/">Add Pitch</a></button>
-                        <button type="button" class="btn btn-outline-primary"><a href="/categories/memes">Read Pitches</a></button>
-                    </div>
-                </div>
-            </div>
+         
         </div>
     </div>
     <br>
     <div class="container">
         <div class="row">
-            <div class="col-6 col-md-4">
+            <div class="col-6 col-md-6">
                 <div class="card text-center">
                     <div class="card-header fs-1 fw-bold">
                         Love Spot
@@ -68,39 +55,27 @@
                     </div>
                     <div class="card-footer text-muted">
                         <button type="button" class="btn btn-outline-primary"><a href="../pitch/">Add Pitch</a></button>
-                        <button type="button" class="btn btn-outline-primary"><a href="/categories/love">Read Pitches</a></button>
+                        <button type="button" class="btn btn-outline-primary"><a href="/categories/life">Read Pitches</a></button>
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-md-4">
+            <div class="col-6 col-md-6">
                 <div class="card text-center">
                     <div class="card-header fs-1 fw-bold">
-                        Religious Hub
+                        Elavator 
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title fs-3"> <strong>Religious Pitches</strong> <br> <br> Be strong and courageous. </h5>
+                        <h5 class="card-title fs-3"> <strong>Elavator pitch</strong> <br> <br>The elevator is going up.</h5>
                     </div>
                     <div class="card-footer text-muted">
                         <button type="button" class="btn btn-outline-primary"><a href="../pitch/">Add Pitch</a></button>
-                        <button type="button" class="btn btn-outline-primary"><a href="/categories/religious">Read Pitches</a></button>
+                        <button type="button" class="btn btn-outline-primary"><a href="/categories/coding">Read Pitches</a></button>
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-md-4">
-                <div class="card text-center">
-                    <div class="card-header fs-1 fw-bold">
-                        Sporty Spot
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title fs-3"> <strong>Sport Pitches</strong> <br> <br>“ The only way to prove that you're a good sport is to lose.”</h5>
-                    </div>
-                    <div class="card-footer text-muted">
-                        <button type="button" class="btn btn-outline-primary"><a href="../pitch/">Add Pitch</a></button>
-                        <button type="button" class="btn btn-outline-primary"><a href="/categories/sporty">Read Pitches</a></button>
-                    </div>
-                </div>
-            </div>
+          
         </div>
     </div>
     {% endblock%}
+ 
 </body>
