--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,32 +1,27 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand fs-1 fw-bold" href="/">LORA PITCH-APP::</a>
+    <a class="navbar-brand fs-1 fw-bold" href="/">LORA PITCH-APP</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto fs-3 m-6">
+        <ul class="navbar-nav mr-auto fs-3 m-6 text-light">
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" >
                 <a class="nav-link" href="/categories/inspiration">Inspirational</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/categories/pickup_lines">Pick-Up</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/categories/memes">Memes</a>
+                <a class="nav-link" href="/categories/coding">Memes</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/categories/love">Love</a>
+                <a class="nav-link" href="/categories/life">Love</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/categories/religious">Religious</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/categories/sporty">Sporty</a>
-            </li>
+          
         </ul>
         <ul class="nav navbar-nav navbar-right fs-3 fw-bold">
             {% if current_user.is_authenticated %}
