--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -16,7 +16,7 @@
                 <a class="nav-link" href="/categories/pickup_lines">Pick-Up</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/categories/coding">Memes</a>
+                <a class="nav-link" href="/categories/coding">Elavator</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/categories/life">Love</a>
