--- a/app/static/css/category.css
+++ b/app/static/css/category.css
@@ -1,3 +1,8 @@
 body {
     background-color: rgb(238, 247, 247);
+
+}
+.card {
+    border-radius: 5px;
+    box-shadow: 2px 2px 12px rgb(3, 3, 3, 0.75);
 }
