--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,8 @@
     <br>
     <div class="container">
         <h1 class="text-center fs-1 fw-bold">LORA PITCH-APP</h1>
-        <h3 class="text-center fs-3">Welcome to the pitches Thrills, you have less than a minute to write your new pitch to impress users, users will have to vote your pitch and also leaving comments.</h3>
+        <h3 class="text-center fs-3"> <p>{{Quote.quote}}</p>
+            <h5>{{Quote.author}}</h5></h3>
     </div>
     <br>
     <br>
@@ -17,8 +18,7 @@
                         Inspirational Hub
                     </div>
                     <div class="card-body">
-                        <p>{{Quote.quote}}</p>
-                        <h5>{{Quote.author}}</h5>
+                       
                       
                     </div>
                     <div class="card-footer text-muted">
