--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,12 +15,9 @@
             <div class="col-12 col-md-12">
                 <div class="card text-center">
                     <div class="card-header fs-1 fw-bold">
-                        Inspirational Hub
+                        Blog
                     </div>
-                    <div class="card-body">
-                       
-                      
-                    </div>
+                 
                     <div class="card-footer text-muted">
                         <button type="button" class="btn btn-outline-primary"><a href="../pitch/">Add Blog</a></button>
                         <button type="button" class="btn btn-outline-primary"><a href="/categories/inspiration">View Blogs</a></button>
