add a background image

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,8 +5,8 @@
     <br>
     <div class="container">
         <h1 class="text-center fs-1 fw-bold">LORA PITCH-APP</h1>
-        <h3 class="text-center fs-3"> <p>{{Quote.quote}}</p>
-            <h5>{{Quote.author}}</h5></h3>
+        <h3 class="text-center fs-4"> {{Quote.quote}}</h3>
+            <h5 class="text-center fs-2">Author: {{Quote.author}}</h5>
     </div>
     <br>
     <br>
