--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;600;700&family=Dosis:wght@200;300;400;500;600;700&family=Lobster&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600&display=swap');
 body {
-    /* background-image: url(../images/background.jpg); */
-    height: 100vh;
+    
+    height:50px;
     width: 100%;
     font-family: 'Roboto Flex', sans-serif;
+
 }
+#hi{
+    font-size: 50px;
+} 
+
