--- a/app/templates/comments.html
+++ b/app/templates/comments.html
@@ -7,7 +7,7 @@
     {% for com in comment[::-1] %}
     <div class="container">
         <div class="card-groups">
-            <div class="card" style="background-color: white; margin-top: 10%;">
+            <div class="card" style="background-color: white;">
                 <div class="card-body">
                     <h4 class="card-title">{{com.author}}</h4>
                     <p class="card-text">{{com.comment}}.</p>
