--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%} {% block styles%} {{ super() }}
 <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}"> {% endblock %} {% block content %}
 
-<body style="background-image: url(../static/images/cristina-glebova-FbNoihuPJNs-unsplash.jpg);">
+<body style="background-color: #ffdacc">
     <br>
     <div class="container">
         <h1 class="text-center fs-1 fw-bold">LORA BLOG</h1>
@@ -17,7 +17,7 @@
                     <div class="card-header fs-1 fw-bold">
                         Blog
                     </div>
-                 
+                     
                     <div class="card-footer text-muted">
                         <button type="button" class="btn btn-outline-primary"><a href="../pitch/">Add Blog</a></button>
                         <button type="button" class="btn btn-outline-primary"><a href="/categories/inspiration">View Blogs</a></button>
@@ -29,6 +29,7 @@
         </div>
     </div>
     
+
     {% endblock%}
  
 </body>
