--- a/app/templates/new_comment.html
+++ b/app/templates/new_comment.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%} {% import "bootstrap/wtf.html" as wtf %} {% block content %}
 <br>
 <br>
-<div class="container">
+<div class="container" style="margin-top: 3%;">
     <br>
     <br> {{ wtf.quick_form(comment_form) }}
 
