--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8"> {% if title %}
     <title> {{ title }}</title>
     {% else %}
-    <title> Welcome to LORA PITCH-APP::</title>
+    <title> Welcome to LORA BLOG</title>
     {% endif %}
 </head>
 
