--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,9 +15,10 @@
             <div class="col-12 col-md-12">
                 <div class="card text-center">
                     <div class="card-header fs-1 fw-bold">
-                        Blog
+                        <h4 style="font-weight: bold;">Fitness Blog</h4>
+                        <p style="font-size: 15px;"> My Fitness Pal is an online platform that helps people lose weight.<br> The site also offers a great set of mobile apps that allow users<br> to keep track of their weight, exercise regularly, and more.</p>
                     </div>
-                     
+                    
                     <div class="card-footer text-muted">
                         <button type="button" class="btn btn-outline-primary"><a href="../pitch/">Add Blog</a></button>
                         <button type="button" class="btn btn-outline-primary"><a href="/categories/inspiration">View Blogs</a></button>
