--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,8 +10,9 @@
     </div>
     <br>
     <br>
+    <h3 style="text-align: center;">Recent Blogs</h3>
     <div class="container">
-        <div class="row">
+        <div class="column">
             <div class="col-12 col-md-12">
                 <div class="card text-center">
                     <div class="card-header fs-1 fw-bold">
@@ -29,7 +30,51 @@
          
         </div>
     </div>
-    
+    <br>
+    <br>
+    <div class="container">
+        <div class="column">
+            <div class="col-12 col-md-12">
+                <div class="card text-center">
+                    <div class="card-header fs-1 fw-bold">
+                        <h4 style="font-weight: bold;">Fitness Blog</h4>
+                        <p style="font-size: 15px;"> My Fitness Pal is an online platform that helps people lose weight.<br> The site also offers a great set of mobile apps that allow users<br> to keep track of their weight, exercise regularly, and more.</p>
+                    </div>
+                    
+                    <div class="card-footer text-muted">
+                        <button type="button" class="btn btn-outline-primary"><a href="../pitch/">Add Blog</a></button>
+                        <button type="button" class="btn btn-outline-primary"><a href="/categories/inspiration">View Blogs</a></button>
+                    </div>
+                </div>
+            </div>
+            
+         
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="container">
+        <div class="column">
+            <div class="col-12 col-md-12">
+                <div class="card text-center">
+                    <div class="card-header fs-1 fw-bold">
+                        <h4 style="font-weight: bold;">Fitness Blog</h4>
+                        <p style="font-size: 15px;"> My Fitness Pal is an online platform that helps people lose weight.<br> The site also offers a great set of mobile apps that allow users<br> to keep track of their weight, exercise regularly, and more.</p>
+                    </div>
+                    
+                    <div class="card-footer text-muted">
+                        <button type="button" class="btn btn-outline-primary"><a href="../pitch/">Add Blog</a></button>
+                        <button type="button" class="btn btn-outline-primary"><a href="/categories/inspiration">View Blogs</a></button>
+                    </div>
+                </div>
+            </div>
+            
+         
+        </div>
+    </div>
+    <div class="footer" style="background-color: black; height: 50px;color: white; margin-top: 10%;">
+        <p class="foot" style="text-align: center; padding-top: 1%;">Copyright © 2022:Flora Chepchirchir</p>
+    </div>
 
     {% endblock%}
  
