--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -14,26 +14,29 @@
         <div class="card-columns">
             {% for category in category[::-1] %}
 
-            <div class="card bg-transparent border-success">
+            <div class="card bg-transparent border-black">
                 <div class="card-header bg-transparent border-secondary fs-1">
                     {{category.title}}
                 </div>
                 <div class="card-body text">
                     <blockquote class="blockquote mb-0">
                         <p class="fs-2">{{category.pitch}}</p><br>
-                        <footer class="blockquote-footer bg-transparent border-success fs-3">{{category.author}}
+                        <footer class="blockquote-footer bg-transparent border-black fs-3">{{category.author}}
                             <br><cite title="Source Title">Date Published ::: {{category.date.strftime('%Y-%m-%d')}}</cite></footer>
                     </blockquote>
                 </div>
                 <div class="card-footer bg-transparent border-success">
                     <button type="button" class="btn btn-outline-success btn-lg"><a href="/new_comment/{{category.id}}">Comment</a></button> <button type="button" class="btn btn-outline-success btn-lg"><a href="/comments/{{category.id}}">View comments</a></button>
-                    <button type="button" class="btn btn-warning bt-lg" (click)='upVoteButtonClick()'>UpVote</button>
-                    <button type="button" class="btn btn-success bt-lg" (click)='downVoteButtonClick()'>DownVote</button>
+                    <button type="button" class="btn btn-danger bt-lg" (click)='upVoteButtonClick()'>Delete</button>
+
                 </div>
             </div>
 
             {% endfor %}
-
+     
         </div>
+    </div>    
         {% endblock %}
+        <br>
+        <br>
 </body>
