--- a/app/templates/comments.html
+++ b/app/templates/comments.html
@@ -12,7 +12,7 @@
                     <h4 class="card-title">{{com.author}}</h4>
                     <p class="card-text">{{com.comment}}.</p>
                 </div>
-                <div class="card-footer bg-transparent border-success"><small class="text-muted">Published at ::: {{com.date_posted.strftime('%Y-%m-%d')}}</small></div>
+                <div class="card-footer bg-transparent border-black"><small class="text-muted">Published at ::: {{com.date_posted.strftime('%Y-%m-%d')}}</small></div>
             </div>
         </div>
     </div>
