--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,8 +37,10 @@
             <div class="col-12 col-md-12">
                 <div class="card text-center">
                     <div class="card-header fs-1 fw-bold">
-                        <h4 style="font-weight: bold;">Fitness Blog</h4>
-                        <p style="font-size: 15px;"> My Fitness Pal is an online platform that helps people lose weight.<br> The site also offers a great set of mobile apps that allow users<br> to keep track of their weight, exercise regularly, and more.</p>
+                        <h4 style="font-weight: bold;">Travel Blog</h4>
+                        <p style="font-size: 15px;"> Nature lovers will really enjoy reading this travel blog website.<br> Atlas and Boots is dedicated to outdoor travel, including lifestyle tips,<br> hiking, diving, and other fun nature-oriented activities.</p> 
+
+                  
                     </div>
                     
                     <div class="card-footer text-muted">
@@ -58,7 +60,7 @@
             <div class="col-12 col-md-12">
                 <div class="card text-center">
                     <div class="card-header fs-1 fw-bold">
-                        <h4 style="font-weight: bold;">Fitness Blog</h4>
+                        <h4 style="font-weight: bold;">Lifestyle Blog</h4>
                         <p style="font-size: 15px;"> My Fitness Pal is an online platform that helps people lose weight.<br> The site also offers a great set of mobile apps that allow users<br> to keep track of their weight, exercise regularly, and more.</p>
                     </div>
                     
